# url-shortener

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/: 20260328173539_create_urls.sql  20260329103741_add_expires_at_to_urls.sql
src/: errors.rs  main.rs  utils.rs
src/routes/: mod.rs  qr.rs  redirect.rs  shorten.rs  stats.rs
