[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "json"] }
dotenvy = "0.15"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
tower_governor = "0.8"
qrcode = "0.14"
image = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }